--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,15 @@
     <string name="app_name">My Application</string>
     <string name="FinSafe">FinSafe</string>
     <string name="username">Username</string>
-    <string name="email">Email</string>
+    <string name="email">username@gmail.com</string>
     <string name="edit_profile">Edit Profile</string>
     <string name="general">General</string>
     <string name="mode_hitam">Mode Hitam</string>
     <string name="logout">Keluar</string>
+    <string name="welcome">Selamat Datang,</string>
+    <string name="lihat_detail">Lihat Detail</string>
+    <string name="rp">Rp</string>
+    <string name="jumlah_pengeluaran">7.000.000,00</string>
+    <string name="prediksi_pengeluaranku">PREDIKSI PENGELUARAN KU</string>
 
 </resources>
