--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,12 @@
 <!-- Custom EditText-->
     <string name="error_name">Tolong masukan nama</string>
     <string name="error_password">Masukan minimal 8 char</string>
+    <string name="tabungan_idealku">Tabungan Ideal Ku</string>
+    <string name="dana_darurat">Rekomendasi Dana Darurat</string>
+    <string name="emailTextView">Email</string>
+    <string name="password">Password</string>
+    <string name="passwordconfirm">Masukan password kembali</string>
+    <string name="daftar">Daftar</string>
+    <string name="sudahadaakun">Sudah memiliki akun?</string>
 
 </resources>
