--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,5 +40,7 @@
     <string name="selamat">Selamat</string>
     <string name="welcome2">Mari masuk untuk memulai \nperjalananmu</string>
     <string name="mulai">mulai</string>
+    <string name="ayo_mulai">Ayo Mulai !</string>
+    <string name="landingpage3">Pilih untuk memulai untuk perjalanan\ntabungan mu</string>
 
 </resources>
