--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,24 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">My Application</string>
-    <string name="FinSafe">FinSafe</string>
-    <string name="username">Username</string>
+    <!--    <string name="ayo_mulai">Ayo Mulai !</string>-->
+    <!--    <string name="register">Register</string>-->
+    <!--    <string name="username">Username</string>-->
+    <!--    <string name="emailTextView">Email</string>-->
+    <!--    <string name="password">Password</string>-->
+    <!--    <string name="daftar">Daftar</string>-->
+    <!--    <string name="sudahadaakun">"Sudah memiliki akun "</string>-->
+    <!--    <string name="login">login</string>-->
+    <!--    <string name="landingpage3">Pilih untuk memulai perjalanan \ntabungan mu</string>-->
+    <!--    <string name="welcome">Welcome</string>-->
+    <!--    <string name="username_home">Username</string>-->
+    <!--    <string name="prediksi_pengeluaranku">PREDIKSI PENGELUARAN KU</string>-->
+    <!--    <string name="rp">Rp</string>-->
+    <!--    <string name="jumlah_pengeluaran">7.000.000,00</string>-->
+    <!--    <string name="lihat_detail">Lihat Detail</string>-->
+    <!--    <string name="tabungan_idealku">Tabungan Ideal Ku</string>-->
+    <!--    <string name="dana_darurat">Rekomendasi Dana Darurat</string>-->
+    <string name="dana_darurat_jumlah">2.000.000,00</string>
+    <string name="selamatDatang">Selamat Datang,</string>
     <string name="email">username@gmail.com</string>
     <string name="edit_profile">Edit Profile</string>
     <string name="general">General</string>
@@ -46,5 +63,54 @@
     <string name="error_message">Sesuatu ada yang Salah\nMohoh dicoba kembali</string>
     <string name="ok">Oke</string>
     <string name="response_image">gambar respon</string>
+    <string name="app_name">FinSafe</string>
+    <string name="username">Username</string>
+    <string name="username_home">username</string>
+    <string name="kepalaRumah">Informasi Kepala Rumah Tangga</string>
+    <string name="usiaRumah">Usia Kepala Rumah Tangga</string>
+    <string name="lihat_jumlah_tabungan">Ayo lihat detailnya !</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="lorem_ipsum">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
+        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
+        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
+        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
+        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
+        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
+        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
+        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
+        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
+        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
+        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
+        bibendum, vel congue leo egestas.\n\n
+        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
+        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
+        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
+        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
+        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
+        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
+        est.\n\n
+        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
+        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
+        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
+        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
+        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
+        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
+        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
+        convallis.\n\n
+        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
+        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
+        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
+        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
+        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
+        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
+        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
+    </string>
+
 
 </resources>
